<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <SurfaceView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3700B3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bpm"
                android:textColor="@android:color/white"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/bpm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/_0"
                android:textColor="@android:color/white"
                android:textSize="32sp" />

            <ImageView
                android:id="@+id/beat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:padding="7dp"
                android:contentDescription="@string/on" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3700B3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/silabel"
                android:textColor="@android:color/white"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/si"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/_0"
                android:textColor="@android:color/white"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/siDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="60"
                android:padding="7dp"
                android:textAlignment="textEnd"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rateBars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maxratelabel" />

                <TextView
                    android:id="@+id/maxRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ratelabel" />

                <TextView
                    android:id="@+id/rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/playButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#3700B3"
        android:text="@string/play"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/finger"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/begin_alert"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>